<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Introduction">

    <!-- Login Form -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:layout_marginBottom="20dp"
        android:src = "@drawable/titlepicture">
    </ImageView>

    <Button
        android:id="@+id/SelStudyBtn"
        android:text="@string/h_ng_d_n_t_h_c"
        android:fontFamily="@font/poppins_medium"
        android:layout_width="290dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:padding="20dp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/LearningBtn"
        android:text="@string/b_i_gi_ng_online"
        android:fontFamily="@font/poppins_medium"
        android:layout_width="290dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:padding="20dp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/QUizBinBtn"
        android:text="@string/quiz_pin"
        android:fontFamily="@font/poppins_medium"
        android:layout_width="290dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:padding="20dp"
        android:layout_height="wrap_content" />

</LinearLayout>